--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
             transition: all 0.2s ease-in-out;
         }
     </style>
+    <script type='text/javascript' src='//pl27764330.revenuecpmgate.com/b2/a7/1a/b2a71a1de7362cf26a0c05bb68967285.js'></script>
 </head>
 <body class="min-h-screen flex flex-col justify-center items-center p-4">
+    <script async="async" data-cfasync="false" src="//pl27764338.revenuecpmgate.com/bc812150ff3cde83f0916cb01b71a37b/invoke.js"></script>
+    <div id="container-bc812150ff3cde83f0916cb01b71a37b"></div>
 
     <!-- Main Card Container: Professional, rounded, and shadowed -->
     <div class="container bg-white p-8 md:p-12 rounded-xl shadow-2xl max-w-lg w-full text-center border-t-4 border-teal-600">
@@ -71,6 +74,18 @@
             }
         });
     </script>
-
+    <script type="text/javascript">
+    	atOptions = {
+    		'key' : '2ad76cbe0991a03c327fb6fced45a198',
+    		'format' : 'iframe',
+    		'height' : 60,
+    		'width' : 468,
+    		'params' : {}
+    	};
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/2ad76cbe0991a03c327fb6fced45a198/invoke.js"></script>
+    <script type='text/javascript' src='//pl27764333.revenuecpmgate.com/3e/01/57/3e01578aa73165d037eafe119a13ae46.js'></script>
+    
 </body>
 </html>
+
